--- a/config/example.env
+++ b/config/example.env
@@ -1,3 +1,5 @@
 TARGET_ENV=DEV
-STATIC_PATH=assets/static
+STATIC_PATH=apps/assets/static
 DJANGO_SECRET_PASS=+g^)ua$3223bl6a59&v!cs2ktn5g@fp!s(ib=4jiqom1jsf^_l
+TZ=America/Sao_Paulo
+DJANGO_LANGUAGE=pt-br
